--- a/packages/composer-client/package.json
+++ b/packages/composer-client/package.json
@@ -72,7 +72,7 @@
   },
   "dependencies": {
     "composer-common": "0.20.6",
-    "composer-connector-hlfv1": "0.20.6",
+    "composer-connector-hlfv1": "file:../composer-connector-hlfv1",
     "composer-connector-proxy": "0.20.6",
     "composer-wallet-filesystem": "0.20.6",
     "composer-wallet-inmemory": "0.20.6",
