Utilizando dependencias a URLs de paquetes composer-client, composer-admin, composer-conecto-hlfv1

--- a/packages/composer-admin/package.json
+++ b/packages/composer-admin/package.json
@@ -44,7 +44,7 @@
   },
   "dependencies": {
     "composer-common": "0.20.6",
-    "composer-connector-hlfv1": "file:../composer-connector-hlfv1",
+    "composer-connector-hlfv1": "https://raw.githubusercontent.com/jalfonsogh/composer/master-kube/packages/composer-conector-hlfv1.tar.gz",
     "composer-connector-proxy": "0.20.6",
     "composer-wallet-filesystem": "0.20.6",
     "composer-wallet-inmemory": "0.20.6"
