--- a/packages/composer-cli/package.json
+++ b/packages/composer-cli/package.json
@@ -44,8 +44,8 @@
     "ajv": "6.1.1",
     "chalk": "1.1.3",
     "cli-table": "0.3.1",
-    "composer-admin": "file:../composer-admin",
-    "composer-client": "file:../composer-client",
+    "composer-admin": "https://raw.githubusercontent.com/jalfonsogh/composer/master-kube/packages/composer-admin.tar.gz",
+    "composer-client": "https://raw.githubusercontent.com/jalfonsogh/composer/master-kube/packages/composer-client.tar.gz",
     "composer-common": "0.20.6",
     "composer-documentation": "0.20.6",
     "composer-report": "0.20.6",
